# ics-class

./: .gitignore
airemote-master/: .gitignore  README.md  inferemote-2.0.2-py39-none-macosx_10_15_universal2.whl  start_airs.sh
airemote-master/airlab/: config.json
airemote-master/airlab/cartoon/: air.py  applet.py  config.json
airemote-master/airlab/cartoon_model/: config.json
airemote-master/airlab/gesture_model/: aipp.cfg  config.json
airemote-master/airlab/portrait_model/: aipp.cfg  config.json
airemote-master/airlab/reset50_model/: config.json
airemote-master/airlab/yolov3_model/: config.json
airemote-master/airlab/yolov7_model/: README.txt  aipp.cfg  config.json
airemote-master/cplusplus/Mini/googlenet/: CMakeLists.txt  README.md
airemote-master/cplusplus/Mini/googlenet/src/: googlenet.cc  googlenet.h  main.cc
airemote-master/cplusplus/Remote/: CMakeLists.txt  clean-sample.sh
airemote-master/cplusplus/Remote/cartoon/: CMakeLists.txt
airemote-master/cplusplus/Remote/cartoon/src/: cartoon.cc  cartoon.h  main.cc
airemote-master/cplusplus/Remote/googlenet/: CMakeLists.txt
airemote-master/cplusplus/Remote/googlenet-applet/: CMakeLists.txt  README.txt
airemote-master/cplusplus/Remote/googlenet-applet/src/: googlenet.cc  googlenet.hpp  main.cc
airemote-master/cplusplus/Remote/googlenet/src/: googlenet.cc  googlenet.hpp  main.cc
airemote-master/cplusplus/Remote/styletransfer/: CMakeLists.txt
airemote-master/cplusplus/Remote/styletransfer-applet/: CMakeLists.txt
airemote-master/cplusplus/Remote/styletransfer-applet/src/: main.cc  styletransfer.cc  styletransfer.hpp
airemote-master/cplusplus/Remote/styletransfer/src/: main.cc  styletransfer.cc  styletransfer.hpp
airemote-master/cplusplus/Remote/yolov4/: CMakeLists.txt
airemote-master/cplusplus/Remote/yolov4/src/: main.cc  post_process.cc  post_process.hpp  yolov4.cc  yolov4.hpp
airemote-master/cplusplus/Remote/yolov7/: CMakeLists.txt  openEuler.txt
airemote-master/cplusplus/Remote/yolov7/src/: label.h  main.cc  yolov7.cc  yolov7.cc-bgr-nchw  yolov7.h
airemote-master/cplusplus/include/airemote/: airemote.h  airemote_plugin.h  airemote_service.h  airtypes.h
airemote-master/cplusplus/include/atlasmini/: atlas_mini.h
airemote-master/goair/: build.sh  go.mod  main.go
airemote-master/goair/airlab/: googlenet.go  image_net_classes.go  picasso.go
airemote-master/goair/goair/: airemoteapi.h  airlib.go  atlasremote.go
airemote-master/goair/libairemote/: Makefile  airemoteapi.c  googlenet-dummy.c
airemote-master/lib/python3/: README.md  inferemote-1.0.2-cp37-none-manylinux1_x86_64.whl  inferemote-1.0.2-py39-none-linux_x86_64.whl  inferemote-1.0.2-py39-none-macosx_10_15_universal.whl  inferemote-1.0.2-py39-none-macosx_10_15_x86_64.whl  inferemote-1.0.2-py39-none-win_amd64.whl  inferemote-2.0.1-py39-none-linux_aarch64.whl  inferemote-2.0.1-py39-none-linux_x86_64.whl  inferemote-2.0.1-py39-none-macosx_10_15_universal.whl  inferemote-2.0.1-py39-none-win_amd64.whl  inferemote-2.0.2-py39-none-linux_x86_64.whl  inferemote-2.0.2-py39-none-macosx_10_15_universal2.whl  inferemote-2.0.2-py39-none-win_amd64.whl
airemote-master/pyair/: airlib.py  dummy_model.py  dummyloader.py  libgooglenet.dylib  test_airemote.py  test_applet.py  test_with_airobject.py
airemote-master/pyair/googlenet/: googlenet.py
airemote-master/pyair/picasso/: picasso.py
airemote-master/python/1-app/: googlenet.py  picasso.py  test_picasso.py
airemote-master/python/2-net/cartoon/: cartoon.py  test.py
airemote-master/python/2-net/deeplabv3_plus/: deeplabv3.py  test.py
airemote-master/python/2-net/googlenet/: gnet_mini.py  googlenet.py
airemote-master/python/2-net/lenet/: lenet.py  test.py
airemote-master/python/2-net/styletransfer/: app_demo.py  style_transfer.py  test.py
airemote-master/python/2-net/yolov4_dectection/: README.txt  yolov4.py
airemote-master/python/3-applet/cartoon/: test.py
airemote-master/python/3-applet/deeplabv3/: air.py  applet.py  test.py
airemote-master/python/3-applet/googlenet/: air.py  applet.py  test.py
airemote-master/python/3-applet/styletransfer/: air.py  applet.py  test.py
airemote-master/python/3-applet/yolov4/: air.py  applet.py  mark_objects.py  test.py
airemote-master/python/3-applet/yolov5-lsc/: applet.py  yolov5_applet.py
airemote-master/python/4-notebook/: README.txt  demo1-lenet_app.ipynb  demo2-styletransfer_app.ipynb  demo3-deeplabv3_test.ipynb
airemote-master/python/4-notebook/algs/: deeplabv3.py  lenet.py  styletransfer.py
airemote-master/python/misc/: image_test.py
airemote-master/python/testing/body_pose/: body_pose.py  pose_decode.py  test.py
airemote-master/python/testing/gesture/: gesture.py  test.py
airemote-master/python/testing/head_pose/: main.py  whenet.py  yolov3.py
airemote-master/python/testing/portrait/: app.py  portrait.py  test.py
airemote-master/python/testing/web_app/: test.py  web_app.py
airemote-master/sdcard/: README.md
airemote-master/sdcard/200DK/logrotate.d/: atlas200dk
airemote-master/sdcard/200DK/profile.d/: atlas200dk.sh
airemote-master/sdcard/200IDK-A2/: rc.local
airemote-master/sdcard/200IDK-A2/ld.so.conf.d/: airemote.conf
airemote-master/sdcard/200IDK-A2/profile.d/: airemote.sh
airemote-master/tools/: aclloader  airinfo  pyairloader
class-ai-samples-master/: README.en.md  README.md  mnist.onnx
class-ai-samples-master/1-ga-pso/: ga.py  plot.py  pso.py
class-ai-samples-master/2-ann/: nn_number.py
class-ai-samples-master/3-svm/: svm_number.py
class-ai-samples-master/4-pca-face/: pca-face.py
class-ai-samples-master/5-face-detect/: app.py  faces.py
class-ai-samples-master/5-face-detect/templates/: index.html
class-ai-samples-master/lenet-mindspore/: MNIST.onnx  checkpoint_lenet-1_1875.ckpt  checkpoint_lenet-2_1875.ckpt  checkpoint_lenet-3_1875.ckpt  checkpoint_lenet-4_1875.ckpt  checkpoint_lenet-5_1875.ckpt  convert.py  lenet.ipynb  lenet.py
class-ai-samples-master/lenet-mindspore/rank_0/om/: analyze_fail.ir
homework/markdown/: report_3.md
(+4 files in other folders)
